parslers-benchmark/src/tests/invalid/syntaxErr/basic/unescapedChar.wacc
# unescaped double quote

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  char a = '"'
end
